--- a/LoginApp/Storyboards/Base.lproj/Main.storyboard
+++ b/LoginApp/Storyboards/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+    <device id="retina4_0" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -8,50 +8,56 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Main View Controller-->
+        <!--Login View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="MainViewController" customModule="LoginApp" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="LoginViewController" customModule="LoginApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="28" translatesAutoresizingMaskIntoConstraints="NO" id="4ql-ma-ICw">
-                                <rect key="frame" x="60" y="271" width="294" height="96"/>
+                                <rect key="frame" x="30" y="120" width="260" height="96"/>
                                 <subviews>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Login" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="uzz-sx-Whl">
-                                        <rect key="frame" x="0.0" y="0.0" width="294" height="34"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="260" height="34"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits"/>
+                                        <textInputTraits key="textInputTraits" returnKeyType="next" enablesReturnKeyAutomatically="YES"/>
+                                        <connections>
+                                            <outlet property="delegate" destination="BYZ-38-t0r" id="229-au-Ut7"/>
+                                        </connections>
                                     </textField>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="a85-oN-oh2">
-                                        <rect key="frame" x="0.0" y="62" width="294" height="34"/>
+                                        <rect key="frame" x="0.0" y="62" width="260" height="34"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" secureTextEntry="YES" smartDashesType="no" smartInsertDeleteType="no" smartQuotesType="no" textContentType="password"/>
+                                        <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" returnKeyType="done" enablesReturnKeyAutomatically="YES" secureTextEntry="YES" smartDashesType="no" smartInsertDeleteType="no" smartQuotesType="no" textContentType="password"/>
+                                        <connections>
+                                            <outlet property="delegate" destination="BYZ-38-t0r" id="qTT-68-mp3"/>
+                                        </connections>
                                     </textField>
                                 </subviews>
                             </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yI0-eG-379">
-                                <rect key="frame" x="179" y="404" width="56" height="38"/>
+                                <rect key="frame" x="132" y="232" width="56" height="38"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="21"/>
                                 <state key="normal" title="Log In"/>
                                 <connections>
                                     <action selector="logInButtonPressed" destination="BYZ-38-t0r" eventType="touchUpInside" id="WCu-tQ-TOD"/>
-                                    <segue destination="3QN-7U-WyG" kind="show" identifier="" id="kWf-P4-PVU"/>
+                                    <segue destination="3QN-7U-WyG" kind="show" identifier="showWelcomeVC" id="kWf-P4-PVU"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JKf-d1-nVF">
-                                <rect key="frame" x="20" y="465" width="94" height="30"/>
+                                <rect key="frame" x="20" y="286" width="94" height="30"/>
                                 <state key="normal" title="Forgot Login?"/>
                                 <connections>
-                                    <action selector="forgotLoginPressed" destination="BYZ-38-t0r" eventType="touchUpInside" id="P12-Ys-ez8"/>
+                                    <action selector="forgotData:" destination="BYZ-38-t0r" eventType="touchUpInside" id="OkX-wc-fim"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xDo-U2-JDZ">
-                                <rect key="frame" x="271" y="465" width="123" height="30"/>
+                            <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xDo-U2-JDZ">
+                                <rect key="frame" x="177" y="286" width="123" height="30"/>
                                 <state key="normal" title="Forgot Password?"/>
                                 <connections>
-                                    <action selector="forgotPasswordPressed" destination="BYZ-38-t0r" eventType="touchUpInside" id="tMO-uI-I0h"/>
+                                    <action selector="forgotData:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Bxp-NV-3tH"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -59,23 +65,20 @@
                         <color key="backgroundColor" systemColor="opaqueSeparatorColor"/>
                         <constraints>
                             <constraint firstItem="xDo-U2-JDZ" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="JKf-d1-nVF" secondAttribute="trailing" constant="8" symbolic="YES" id="8an-Ou-kE1"/>
-                            <constraint firstItem="4ql-ma-ICw" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="60" id="Bd9-cb-Y2f"/>
-                            <constraint firstItem="JKf-d1-nVF" firstAttribute="top" secondItem="yI0-eG-379" secondAttribute="bottom" constant="23" id="Ikh-uI-euk"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="4ql-ma-ICw" secondAttribute="trailing" constant="60" id="NDL-kP-fmS"/>
-                            <constraint firstItem="4ql-ma-ICw" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="227" id="Rbk-FR-pW0"/>
+                            <constraint firstItem="4ql-ma-ICw" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="30" id="Bd9-cb-Y2f"/>
+                            <constraint firstItem="JKf-d1-nVF" firstAttribute="top" secondItem="yI0-eG-379" secondAttribute="bottom" constant="16" id="Ikh-uI-euk"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="4ql-ma-ICw" secondAttribute="trailing" constant="30" id="NDL-kP-fmS"/>
+                            <constraint firstItem="4ql-ma-ICw" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="120" id="Rbk-FR-pW0"/>
                             <constraint firstItem="yI0-eG-379" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="gT9-x7-Jhi"/>
-                            <constraint firstItem="yI0-eG-379" firstAttribute="top" secondItem="4ql-ma-ICw" secondAttribute="bottom" constant="37" id="lAY-S4-yWy"/>
+                            <constraint firstItem="yI0-eG-379" firstAttribute="top" secondItem="4ql-ma-ICw" secondAttribute="bottom" constant="16" id="lAY-S4-yWy"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="xDo-U2-JDZ" secondAttribute="trailing" constant="20" id="pli-IG-H7r"/>
                             <constraint firstItem="JKf-d1-nVF" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="sru-8n-dLd"/>
-                            <constraint firstItem="xDo-U2-JDZ" firstAttribute="top" secondItem="yI0-eG-379" secondAttribute="bottom" constant="23" id="ttv-Lf-2y1"/>
+                            <constraint firstItem="xDo-U2-JDZ" firstAttribute="top" secondItem="yI0-eG-379" secondAttribute="bottom" constant="16" id="ttv-Lf-2y1"/>
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="forgotLoginButton" destination="JKf-d1-nVF" id="dYg-Ap-fyz"/>
-                        <outlet property="forgotPasswordButton" destination="xDo-U2-JDZ" id="AUy-gM-Bb5"/>
-                        <outlet property="logInButton" destination="yI0-eG-379" id="XEr-Fi-wJz"/>
-                        <outlet property="loginTextField" destination="uzz-sx-Whl" id="YHE-r0-YZc"/>
-                        <outlet property="passwordTextField" destination="a85-oN-oh2" id="8g4-s3-cDK"/>
+                        <outlet property="loginTextField" destination="uzz-sx-Whl" id="A87-OG-nHp"/>
+                        <outlet property="passwordTextField" destination="a85-oN-oh2" id="BHF-1Q-PLi"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -87,29 +90,28 @@
             <objects>
                 <viewController storyboardIdentifier="success" title="Welcome" modalPresentationStyle="fullScreen" id="3QN-7U-WyG" customClass="WelcomeUserViewController" customModule="LoginApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="m25-kP-b9E">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Welcome, User!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kHV-MQ-k0W">
-                                <rect key="frame" x="99" y="241" width="216" height="39"/>
+                                <rect key="frame" x="52" y="150" width="216" height="39"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="32"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="👋" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="l0q-lU-2hG">
-                                <rect key="frame" x="182" y="300" width="50" height="55"/>
+                                <rect key="frame" x="135" y="209" width="50" height="55"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="46"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xqP-Hm-4Lh">
-                                <rect key="frame" x="171" y="659" width="72" height="39"/>
+                                <rect key="frame" x="124" y="365" width="72" height="39"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                 <state key="normal" title="Log out">
                                     <color key="titleColor" red="0.98533803751060622" green="1" blue="0.97619248693475835" alpha="0.66723923456101186" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
                                 <connections>
-                                    <action selector="logoutButtonPressed" destination="3QN-7U-WyG" eventType="touchUpInside" id="TAO-gF-BkQ"/>
                                     <segue destination="XmW-h7-jUg" kind="unwind" unwindAction="unwindFor:" id="AAq-le-dgA"/>
                                 </connections>
                             </button>
@@ -119,7 +121,7 @@
                         <constraints>
                             <constraint firstItem="l0q-lU-2hG" firstAttribute="centerX" secondItem="qp6-br-MoU" secondAttribute="centerX" id="08j-CX-4QE"/>
                             <constraint firstItem="l0q-lU-2hG" firstAttribute="top" secondItem="kHV-MQ-k0W" secondAttribute="bottom" constant="20" id="3Ra-Px-jhp"/>
-                            <constraint firstItem="kHV-MQ-k0W" firstAttribute="top" secondItem="qp6-br-MoU" secondAttribute="top" constant="197" id="7kd-t7-dLY"/>
+                            <constraint firstItem="kHV-MQ-k0W" firstAttribute="top" secondItem="qp6-br-MoU" secondAttribute="top" constant="150" id="7kd-t7-dLY"/>
                             <constraint firstItem="qp6-br-MoU" firstAttribute="bottom" secondItem="xqP-Hm-4Lh" secondAttribute="bottom" constant="164" id="P6a-n3-Ipk"/>
                             <constraint firstItem="kHV-MQ-k0W" firstAttribute="centerX" secondItem="qp6-br-MoU" secondAttribute="centerX" id="WJH-d6-dUR"/>
                             <constraint firstItem="xqP-Hm-4Lh" firstAttribute="centerX" secondItem="m25-kP-b9E" secondAttribute="centerX" id="rjf-eb-cHt"/>
@@ -127,7 +129,6 @@
                     </view>
                     <navigationItem key="navigationItem" id="lu8-Cv-L8j"/>
                     <connections>
-                        <outlet property="logoutButton" destination="xqP-Hm-4Lh" id="kAc-bZ-X8h"/>
                         <outlet property="welcomeLabel" destination="kHV-MQ-k0W" id="0ei-8u-8xS"/>
                     </connections>
                 </viewController>
